--- a/SurviveMe/SurviveMe/SurviveMe.csproj
+++ b/SurviveMe/SurviveMe/SurviveMe.csproj
@@ -20,5 +20,8 @@
     <EmbeddedResource Update="Views\AuthenticationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LandingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
